--- a/build.gradle
+++ b/build.gradle
@@ -170,7 +170,7 @@ publishing {
       pom.withXml {
         asNode().appendNode("name", componentName)
         asNode().appendNode("description", "Embedded Apache Artemis management component")
-        asNode().appendNode("url", "http://interlok.adaptris.net/interlok-docs/adapter-bootstrap.html#activemq-component")
+        asNode().appendNode("url", "http://interlok.adaptris.net/interlok-docs/adapter-bootstrap.html#apache-artemis")
         def properties = asNode().appendNode("properties")
         properties.appendNode("target", "3.6.0+")
         properties.appendNode("license", "false")
