--- a/build.gradle
+++ b/build.gradle
@@ -172,7 +172,7 @@ publishing {
         asNode().appendNode("description", "Embedded Apache Artemis management component")
         asNode().appendNode("url", "http://interlok.adaptris.net/interlok-docs/adapter-bootstrap.html#apache-artemis")
         def properties = asNode().appendNode("properties")
-        properties.appendNode("target", "3.6.0+")
+        properties.appendNode("target", "3.9.0+")
         properties.appendNode("license", "false")
         properties.appendNode("tags", "artemis,management")
         properties.appendNode("externalUrl", "http://activemq.apache.org/")
@@ -210,5 +210,13 @@ tasks.withType(com.github.spotbugs.SpotBugsTask) {
   }
 }
 
+
+task deleteGeneratedFiles(type: Delete) {
+  delete 'activemq-data'
+  delete 'data'
+}
+
+
 javadoc.dependsOn offlinePackageList
 check.dependsOn jacocoTestReport
+clean.dependsOn deleteGeneratedFiles
