--- a/build.gradle
+++ b/build.gradle
@@ -175,7 +175,7 @@ publishing {
         properties.appendNode("target", "3.9.0+")
         properties.appendNode("license", "false")
         properties.appendNode("tags", "artemis,management")
-        properties.appendNode("externalUrl", "http://activemq.apache.org/")
+        properties.appendNode("externalUrl", "https://activemq.apache.org/components/artemis/")
       }
     }
   }
