INTERLOK-3213 Configure as spotbugsMain task to prepare for 4.x

--- a/build.gradle
+++ b/build.gradle
@@ -224,25 +224,22 @@ publishing {
   }
 }
 
-spotbugs {
-  // showProgress = "true"
+spotbugsMain {
   effort = "max"
-  // Ignore failures?
-  // ignoreFailures = false
-
-  // We only care about "high priority" issues...
   reportLevel = "high"
-}
-
-// disable spotbugsTests which checks our test code..
-spotbugsTest.enabled = false
-
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
   reports {
-    xml.enabled = false
-    html.enabled = true
+    xml {
+      enabled = false
+    }
+    html {
+      enabled = true
+    }
   }
 }
+
+  // disable spotbugsTests which checks our test code..
+spotbugsTest.enabled = false
+
 
 
 task deleteGeneratedFiles(type: Delete) {
