--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ ext {
   organizationName = "Adaptris Ltd"
   organizationUrl = "http://interlok.adaptris.net"
   artemisVersion="2.12.0"
-  log4j2Version="2.13.2"
   nettyVersion="4.1.49.Final"
+  slf4jVersion="1.7.30"
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
@@ -115,10 +115,13 @@ dependencies {
   annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") {changing= true}
 
   testCompile  ('junit:junit:4.13')
-  testCompile  ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true}
-  testCompile  ("org.apache.logging.log4j:log4j-core:$log4j2Version")
-  testCompile  ("org.apache.logging.log4j:log4j-1.2-api:$log4j2Version")
-  testCompile  ("org.apache.logging.log4j:log4j-api:$log4j2Version")
+  testCompile "org.slf4j:slf4j-simple:$slf4jVersion"
+  // exclude any log4j dependencies so that we can just use slf4j simple.
+  // works around INTERLOk-3233
+  testCompile "com.adaptris:interlok-stubs:$interlokCoreVersion", {
+    changing= true
+    exclude group: "org.apache.logging.log4j"
+  }
   testCompile  ("org.mockito:mockito-all:1.10.19")
 
   javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
