--- a/build.gradle
+++ b/build.gradle
@@ -215,7 +215,7 @@ publishing {
       pom.withXml {
         asNode().appendNode("name", componentName)
         asNode().appendNode("description", "Embedded Apache Artemis management component")
-        asNode().appendNode("url", "http://interlok.adaptris.net/interlok-docs/adapter-bootstrap.html#apache-artemis")
+        asNode().appendNode("url", "https://interlok.adaptris.net/interlok-docs/#/pages/user-guide/adapter-bootstrap?id=apache-artemis")
         def properties = asNode().appendNode("properties")
         properties.appendNode("target", "3.9.0+")
         properties.appendNode("license", "false")
