--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ ext {
   artemisVersion="2.16.0"
   nettyVersion="4.1.56.Final"
   slf4jVersion="1.7.30"
+  mockitoVersion="3.7.0"
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
@@ -124,8 +125,8 @@ dependencies {
     changing= true
     exclude group: "org.apache.logging.log4j"
   }
-  testCompile ("org.mockito:mockito-core:3.7.0")
-  testCompile ("org.mockito:mockito-inline:3.7.0")
+  testCompile ("org.mockito:mockito-core:$mockitoVersion")
+  testCompile ("org.mockito:mockito-inline:$mockitoVersion")
 
   javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
 
