Remove gradle7 jacoco report warning

--- a/build.gradle
+++ b/build.gradle
@@ -198,8 +198,8 @@ javadoc {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required= true
+        html.required= true
     }
 }
 
